https://jira.jboss.org/jira/browse/JBIDE-4881 Maven Library Provider doesn't save correctly changes made by a user
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@17547 a97e2381-89e5-4abb-bab3-167db6db766c